# rrf

./: README.md  main.py  pyproject.toml
src/: rff.py
src/rrf/: __init__.py
tests/: rff_test.py
