[project]
name = "rrf"
version = "0.1.0"
description = "Reciprocal Rank Fusion"
readme = "README.md"
authors = [
    { name = "Christophe Jolif", email = "cjolif@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
rrf = "rrf:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
